<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="anotherError">Something went wrong. Try again later</string>
    <string name="error300_loading">Error. Resource moved</string>
    <string name="error400_loading">Query error. Please check your network connection</string>
    <string name="error500_loading">Server error. Try the request again</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="menu_refresh">Refresh</string>
    <string name="new_posts">New posts</string>
    <string name="go_to_new_posts">go_to_new_posts</string>
    <string name="clear">clear</string>
    <string name="image_full_screen" />
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="signInAnUp_full_screen" />
    <string name="sign_in"> SIGN IN</string>
    <string name="password">Password</string>
    <string name="authentication">Authentication</string>
    <string name="sign_up"> SIGN UP</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login_error">Invalid login or password. Try again</string>
    <string name="pass_error">Passwords are not identical</string>
    <string name="already_registered">I am already registered</string>
    <string name="textAvatar">AVATAR</string>
    <string name="notification_user_login">User with id:%1$s login</string>
    <string name="retry">Retry</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="two_days_ago">Two days ago</string>
    <string name="week_ago">Week ago</string>
    <string name="two_weeks_ago">Two weeks ago</string>

</resources>